# consume_api

./: README.md  pyproject.toml  requirements.txt
consume_app/: db.sqlite3  manage.py
consume_app/consume_app/: asgi.py  models.py  serializers.py  services.py  settings.py  urls.py  views.py  wsgi.py
consume_app/consume_app/migrations/: 0001_initial.py
mock_dados/: dados.json
tests/: test_consume.py
